// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiToolTip display prop renders block 1`] = `
<div>
  <span
    class="ouiToolTipAnchor ouiToolTipAnchor--displayBlock"
  >
    <button>
      Trigger
    </button>
  </span>
</div>
`;

exports[`OuiToolTip is rendered 1`] = `
<div>
  <span
    class="ouiToolTipAnchor"
  >
    <button>
      Trigger
    </button>
  </span>
</div>
`;

exports[`OuiToolTip shows tooltip on focus 1`] = `
<body
  class="ouiBody-hasPortalContent"
>
  <div>
    <span
      class="ouiToolTipAnchor"
    >
      <button
        aria-describedby="id"
        data-test-subj="trigger"
      >
        Trigger
      </button>
    </span>
  </div>
  <div>
    <div
      aria-label="aria-label"
      class="ouiToolTipPopover ouiToolTip ouiToolTip--top testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      position="top"
      role="tooltip"
      style="top: 50px; left: 50px; opacity: 0; visibility: hidden;"
    >
      <div
        class="ouiToolTip__title"
      >
        title
      </div>
      <div
        class="ouiToolTip__arrow"
      />
      <div>
        content
      </div>
    </div>
  </div>
</body>
`;
